# quadpt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
src/quad4pt/: iquad.py  itquad.py  kernels.py  math.py  quad1d.py  quad2d.py  utils.py
src/quad4pt/_fastgl/: binding.cpp
src/quadpt/: fastgl.py  itquad.py  math.py  quad2d.py  transforms.py
tests/: test_iquad.py  test_itquad.py  test_math.py  test_quad1d.py  test_quad2d.py  test_transforms.py
