[project]
name = "quad4pt"
version = "0.1.0"
description = "quadrature methods for the perturbation theory of large-scale structures"
readme = "README.md"
authors = [
    { name = "zhaoruiyang98", email = "zhaoruiyang19@mails.ucas.edu.cn" }
]
requires-python = ">=3.10"
dependencies = [
    "mpmath>=1.3.0",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[build-system]
requires = [
    "cmake >= 3.18",
    "nanobind >=2.8.0",
    "scikit-build-core >= 0.11.5",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# Tells scikit-build-core where to find the Python package source
wheel.packages = ["src/quad4pt"]

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Don't test Python 3.8 wheels on macOS/arm64
test-skip="cp38-macosx_*:arm64"
